[package]
name = "orasis-plugin"
description = "Base crate for Orasis plugins."
repository = "https://github.com/Undumendil/orasis-plugin"
keywords = ["plugin"]
categories = ["graphics", "multimedia::images"]
license = "GPL-3.0-or-later"
version = "0.1.1"
authors = ["Undumendil <azathtoth@protonmail.com>"]
edition = "2018"
doc = true

[badges]
travis-ci = { repository = "Undumendil/orasis-plugin" }
maintenance = { status = "actively-maintained" }

[dependencies]
termion = "~1.5.3"
