[package]
name = "orasis-plugin"
description = "Base crate for Orasis plugins."
repository = "https://github.com/Undumendil/orasis-plugin"
documentation = "https://docs.rs/orasis-plugin"
readme = "README.md"
keywords = ["plugin"]
categories = ["graphics", "multimedia::images"]
license = "GPL-3.0-or-later"
version = "0.3.0"
authors = ["Undumendil <azathtoth@protonmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "Undumendil/orasis-plugin" }
maintenance = { status = "actively-maintained" }

[dependencies]
termion = "~1.5.3"
